# DeMoD

./: .clang-format  .clangd  .dockerignore  .editorconfig  .gitignore  .luarc.json  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPING.md  LICENSING.md  Makefile  README.md  ROADMAP.md  SECURITY.md  SKILL.md  THIRD_PARTY_LICENSES.md  TRADEMARK.md  WHY.md  dev  flake.nix  stylua.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  pages.yml
apps/terminus/: LICENSE  README.md  control_surface.lua  duck-dance.lua  home.lua  home_render.lua  home_tour.lua  integrity.lua  live-preview.lua  live_patches.lua  modulation.lua  patches.lua  record.lua  route.lua  settings.lua  steam.lua
apps/terminus/dsp/: arrangement.lua  automation.lua  bindings.lua  dsp_studio.lua  fx_descriptors.lua  midi_input.lua  midi_modes.lua  mixer_params.lua  pattern_player.lua  preload.lua  util.lua
apps/terminus/dsp/backend/: engine_ctl.lua  local.lua  orchestrator.lua  select.lua  stub.lua
apps/terminus/dsp/screens/: arrange.lua  bindings.lua  (+13 more)
apps/terminus/midi/: clock.lua  init.lua  learn.lua  map.lua  smf.lua
apps/terminus/patches/: METAL_FORGE_QUARANTINE.md  Makefile  bundles.json  bundles.lua  duck-anim-frames.lua  duck-anim-player.lua  duck-anim.lua  index.lua
audio-stack/: ARCHITECTURE.md  CMakeLists.txt  LICENSE  Makefile  README.md  cabal.project
audio-stack/bridge/: Makefile  demod-dcf-audiocast.c  demod-remote-bridge.c
audio-stack/bridge/test/: README.md  control_probe.py  engine_e2e.sh  loopback.sh  stub_engine.c  ws_client.py  ws_loopback.sh
audio-stack/dsp/include/: demod_faust_glue.h
audio-stack/ipc/include/: demod_commands.h  demod_rt_meters.h  demod_shm.h  demod_spsc.h  demod_triple_buf.h  snake_ipc.h
audio-stack/ipc/test/: test_audio_tap.c  test_commands.c  test_shm.c  test_snake_ipc.c  test_spsc.c  test_triple_buf.c
audio-stack/orchestrator/: LICENSE  demod-orchestrator.cabal
audio-stack/orchestrator/cbits/: demod_bt_ffi.c  demod_bt_ffi.h  demod_ffi_helpers.c  demod_ffi_helpers.h  demod_marketplace_shm.c  demod_marketplace_shm.h  demod_shm.h  demod_spsc.h  demod_triple_buf.h
audio-stack/orchestrator/src/: Main.hs
audio-stack/orchestrator/src/DeMoD/: CLI.hs  Control.hs  Marketplace.hs  OSCRouter.hs  Orchestrator.hs  ProcessTree.hs  Supervisor.hs
audio-stack/orchestrator/src/DeMoD/BT/: Bridge.hs  FFI.hs
audio-stack/orchestrator/src/DeMoD/IPC/: FFI.hs
audio-stack/orchestrator/src/DeMoD/Note/: Pitch.hs  Tracker.hs  Types.hs
audio-stack/orchestrator/src/DeMoD/Ulation/: Engine.hs  YIN.hs
audio-stack/orchestrator/test/: Main.hs  test_ffi_helpers.c
audio-stack/presets/: amp-mic-bass.toml  amp-mic-guitar.toml  direct-guitar.toml  faust-guitar.toml  full-band-live.toml  reamp.toml  synth-direct.toml
audio-stack/rt-audio/include/: demod_rt_audio.h
audio-stack/rt-audio/src/: main.c
audio-stack/scripts/: demod-preset  demod_device_bridge.py  test_device_bridge.py
auto/: README.md  camera.sh  main.lua  media.sh  theme.lua  util.lua
auto/surfaces/: camera.lua  companion.lua  dashboard.lua  media.lua  settings.lua
auto/test/: mock_elm327.py  obd2_selftest.sh
auto/vehicle/: obd2-reader.py  telemetry.lua
completions/: dev.bash
dash/: main.lua  provider.lua  theme.lua
dash/surfaces/: live.lua  mesh.lua  scope.lua
docker/: DOCKERHUB.md  Dockerfile  README.md  compose.yaml  entrypoint.sh
docs/: automotive-compliance.md  browser-client.md  remote-client.md  vehicle-feasibility.md  xr-sink.md
examples/: ar_hud.lua  card_launcher.lua  dcf_loopback.lua  dsp_panel.lua  dsp_studio.lua  hello.lua  i18n_demo.lua  remote_client.lua  systems_viz.lua
gcs/: main.lua  provider.lua  theme.lua
gcs/surfaces/: hud.lua  map.lua  status.lua
include/demod/: app.h  ar.h  demod_rt_meters.h  demod_triple_buf.h  demod_ui.h  dsl.h  font.h  framebuffer.h  gamepad.h  input.h  ipc.h  local_dsp.h  steam_api_shim.h  widget.h
mcp/: README.md  demod_mcp_server.py
meta/: dm.lua
nixos/modules/: snake-hub-network.nix  snake-hub-service.nix  snake-hub.nix  snake-spoke-network.nix  snake-spoke-service.nix  snake-spoke.nix
quanta/: .gitignore  LICENSING.md  Makefile  README.md  ROADMAP.md
quanta/arch/: minimal_c.arch  player.arch
quanta/docs/: FIDELITY.md  SPEC.md  THROUGHLINE.md
quanta/include/: mp.h  qbits.h  qlsf.h  qrender.h  qsc.h  qsp.h  qspu.h  qss.h  qunit.h  qva.h  qvq.h
quanta/src/: analyzer.c  freeze.c  pack.c  render.c  score.c  speech-analyze.c  speech-render.c  speech-sines.c  stream-decode.c  stream.c  unit-encode.c  unit-enroll.c  unit-freeze.c  unit-render.c
quanta/test/: codec_selftest.c  coherent.sh  fuzz.c  harness.c  run.sh  src.f64  throughline.sh  tonal.f64  transparency.sh  unit_null.sh
quanta/tools/: bench_speech.py  build_lsf_res.py  build_lsf_trainset.py  build_trainset.py  fetch_corpus.sh  fetch_speech_bench.sh  gen_probe.py  gen_test.py  gen_tonal.py  gen_voice.py  lsf.py  mcd.py  metrics.py  perceptual.py  proto_aper.py  proto_sines.py  proto_sparse.py  proto_vocoder.py  qcodec.py  qspeech_cli.py  quanta-play.sh  qunits.py  qvoc.py  run_bench.sh  stoi.py  sweep.py  train_lsf.py  train_lsf_pred.py  train_vq.py  train_wb.py  transparency.py
quanta/ui/: quanta_panel.lua  score.lua
rov/: main.lua  provider.lua  theme.lua
rov/surfaces/: dive.lua  link.lua  sonar.lua
shell/: README.md  draw.lua  shell.lua  theme.lua  touch.lua
src/: main.c
src/app/: app.c
src/ar/: ar_composite.c  ar_source.c  xr_sink.c
src/core/: font.c  framebuffer.c
src/db/: streamdb.c  streamdb.h
src/dsl/: control_dsl.c  system_dsl.c
src/dsp/: local_dsp_shim.cpp
src/input/: gamepad.c  midi_input.c  serial_encoder.c
src/ipc/: demod_control.c  demod_params.c  demod_rt_meters.c  dm_dcf.c
src/lua/: lua_bindings.c
src/platform/: compat.h
src/steam/: steam_shim.cpp
src/widgets/: dsp_widgets.c  widgets.c
tests/: test_font_utf8.c
tools/: ar_testframe.sh  genfont.py
web/: README.md  index.html
(+158 files in other folders)
